1.24.4
------


1.24.3
------
(RB=362685)
Revisit resource method null handling.

Deprecating some parameter annotations, replacing with new ones, adding new resource context parameter annotaions and adding unit tests for the same.

(RB=376032)
Upgrade jackson-core and jackson-databind dependencies to 2.4.3.

1.24.2
------
(RB=372362)
fix the bug in handlePut of UriProperties.

1.24.1
------
(RB=370601)
Make Request#getId() return null for Rest.li 2.0.

1.24.0
------
(RB=364843)
Fail fast if resource names clash.

(RB=369715)
Make latest version Rest.li 2.0.

1.23.8
------
(RB=368138)
Expose more properties through DegraderLoadBalancerStrategyV3Jmx

(RB=368038)
Server responds with the same protocol version header name as the client requests.

1.23.7
------
(RB=363781)
Force use next version override.

1.23.6
------
(RB=364827)
reduce the number of hashes in mapKeyV3
update HashBasedPartitionAccessor
move hashLong into HashFunction interface

1.23.5
------
(RB=363214)
Support deprecated protocol version header (X-Restli-Protocol-Version).

(RB=364338)
Use Semaphore to allow multiple outstanding put (when calling D2Config) simultaneously.

1.23.4
------
(RB=359021)
Include file name for pdsc related error messages.

(RB=356420)
Subclassing ZooKeeperPermanentStore to only write changed and new properties to store.

1.23.3
------
(RB=356010)
Update RestLiAnnotationReader to check if a resource' annotation matches its template type.
Remove RestLiCollectionCompoundKey as it is not used.

(RB=356000)
Introduce doc support for action return types.

(RB=360399)
Allow client to change r2 min pool size

1.23.2
------
(RB=353147)
RestliRequestUriSignature: Handle assocKey for FindRequest and GetAllRequest.
MockActionResponseFactory: Add option to support dynamic schema, such as CollectionResponse.

(RB=357131)
Throw exception while generating IDL when Finder or GetAll methods are annotated with non-existing assocKeys.

1.23.1
------
(RB=348277)
Deprecate RestliProtocolCheck.
